frontend/tests/cases/negative/simple/wild.gr
foo : Int → Int
foo _ = 0
