frontend/tests/cases/negative/simple/wild.gr.output
Type checking failed: 
Linearity error: frontend/tests/cases/negative/simple/wild.gr:2:5:
Wildcard pattern `_` allowing a value to be discarded